<?xml version="1.0"?>
<package format="3">
  <name>flex_nav_turtlebot3_demo_bringup</name>
  <version>0.0.1</version>
  <description>Setup to demonstrate the FlexBE-based flexible_navigation setup using turtlebot3 setup</description>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/FlexBE/flex_nav_turtlebot3/issues</url>
  <url type="repository">https://github.com/FlexBE/flex_nav_turtlebot3</url>
  <url type="website">https://github.com/FlexBE/flex_nav_turtlebot3</url>
  <author>David Conner</author>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dwb_core</depend>
  <depend>flex_nav_planners</depend>
  <depend>flex_nav_controllers</depend>
  <depend>flex_nav_flexbe_states</depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>cartographer_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
